<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/main_activity_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@+id/main_activity_emoji_bar"
      />
  <LinearLayout
      android:id="@+id/main_activity_emoji_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:background="@color/chat_input_background"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:padding="4dp"
      >
    <ImageButton
        android:id="@+id/main_activity_emoji"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="12dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/emoji_ios_category_smileysandpeople"
        tools:ignore="ContentDescription"
        />
    <AutoCompleteTextView
        android:id="@+id/main_activity_chat_bottom_message_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:imeOptions="actionSend|flagNoExtractUi"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="3"
        tools:ignore="LabelFor"
        />
    <ImageView
        android:id="@+id/main_activity_send"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="12dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_send"
        tools:ignore="ContentDescription"
        />
  </LinearLayout>
</RelativeLayout>
